fixed brand logo spacing

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -36,3 +36,7 @@ body {
 #image {
   text-align: center !important;
 }
+
+.brand-logo {
+  margin-left: 15px;
+}
